[package]
name = "zorro_tradier_plugin"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6"
libc = "0.2"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
src = "0.0.6"
tradier = { git = "https://github.com/maccam912/tradier" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
